force-app/main/default/objects/Certificacion__c/Certificacion__c.object-meta.xml
<CustomObject>
    <label>Certificacion</label>
    <nameField>
        <displayFormat>CER-{00000000}</displayFormat>
        <label>Nombre de certificacion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>