force-app/main/default/objects/Certificacion__c/fields/Acumulado_anterior__c.field-meta.xml
<CustomField>
    <fullName>Acumulado_anterior__c</fullName>
    <label>Acumulado anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>