force-app/main/default/objects/Certificacion__c/fields/Acumulado_total__c.field-meta.xml
<CustomField>
    <fullName>Acumulado_total__c</fullName>
    <label>Acumulado total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>