force-app/main/default/objects/Certificacion__c/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <label>Observaciones</label>
    <length>80</length>
    <type>Text</type>
</CustomField>