force-app/main/default/objects/Certificacion__c/fields/Porcentaje_avance_total__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_avance_total__c</fullName>
    <label>Porcentaje avance total</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>