force-app/main/default/objects/Certificacion__c/fields/Total_certificado__c.field-meta.xml
<CustomField>
    <fullName>Total_certificado__c</fullName>
    <label>Total certificado</label>
    <summarizedField>Certificacion_detalle__c.Valor_actual__c</summarizedField>
    <summaryForeignKey>Certificacion_detalle__c.certificacion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>